@@ -3,6 +3,7 @@
 import testbase
 import datetime
 from sqlalchemy import *
+from sqlalchemy import exceptions
 from sqlalchemy.databases import sqlite
 from testlib import *
 
@@ -83,6 +84,68 @@ class DialectTest(AssertMixin):
         finally:
             testbase.db.execute("drop table django_admin_log")
             testbase.db.execute("drop table django_content_type")
+
+
+class InsertTest(AssertMixin):
+    """Tests inserts and autoincrement."""
+
+    def _test_empty_insert(self, table, expect=1):
+        try:
+            table.create()
+            for wanted in (expect, expect * 2):
+
+                table.insert().execute()
+
+                rows = table.select().execute().fetchall()
+                print rows
+                self.assertEquals(len(rows), wanted)
+        finally:
+            table.drop()
+
+    @testing.supported('sqlite')
+    def test_empty_insert_pk1(self):
+        self._test_empty_insert(
+            Table('a', MetaData(testbase.db),
+                  Column('id', Integer, primary_key=True)))
+
+    @testing.supported('sqlite')
+    def test_empty_insert_pk2(self):
+        self.assertRaises(
+            exceptions.DBAPIError,
+            self._test_empty_insert,
+            Table('b', MetaData(testbase.db),
+                  Column('x', Integer, primary_key=True),
+                  Column('y', Integer, primary_key=True)))
+
+    @testing.supported('sqlite')
+    def test_empty_insert_pk3(self):
+        self.assertRaises(
+            exceptions.DBAPIError,
+            self._test_empty_insert,
+            Table('c', MetaData(testbase.db),
+                  Column('x', Integer, primary_key=True),
+                  Column('y', Integer, PassiveDefault('123'),
+                         primary_key=True)))
+
+    @testing.supported('sqlite')
+    def test_empty_insert_pk4(self):
+        self._test_empty_insert(
+            Table('d', MetaData(testbase.db),
+                  Column('x', Integer, primary_key=True),
+                  Column('y', Integer, PassiveDefault('123'))))
+
+    @testing.supported('sqlite')
+    def test_empty_insert_nopk1(self):
+        self._test_empty_insert(
+            Table('e', MetaData(testbase.db),
+                  Column('id', Integer)))
+    
+    @testing.supported('sqlite')
+    def test_empty_insert_nopk2(self):
+        self._test_empty_insert(
+            Table('f', MetaData(testbase.db),
+                  Column('x', Integer),
+                  Column('y', Integer)))
 
 
 if __name__ == "__main__":
