@@ -1,13 +1,19 @@
 =======
 CHANGES
 =======
+
 0.4.1
 -----
-- added test coverage for unknown type reflection, fixed
-  sqlite/mysql handling of type reflection for unknown types
+
+- Added test coverage for unknown type reflection, fixed sqlite/mysql
+  handling of type reflection for unknown types.
+
+- Fixed empty (zero column) sqlite inserts, allowing inserts on
+  autoincrementing single column tables.
   
 0.4.0
 -----
+
 - (see 0.4.0beta1 for the start of major changes against 0.3, 
   as well as http://www.sqlalchemy.org/trac/wiki/WhatsNewIn04 )
 
